# BlockVault-Dep

./: .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  Makefile  README.md  app.py  docker-compose.yml  env.example  pyproject.toml  recipient_private.pem  recipient_public.pem  render.yaml  requirements.txt
blockvault/: DEMO_README.md  DEMO_SUMMARY.md  __init__.py  demo_data.json  demo_simulator.py  mock_cases.py  run_demo.py  showcase_demo.py  start_demo.py  test_case_rbac.json  test_chain_of_custody.json  test_chain_of_custody.py  test_demo.py  test_legal_documents.json  test_rbac_system.py  test_redaction.py
blockvault-backend/: mock_cases.py
blockvault/api/: auth.py  files.py  settings.py  users.py
blockvault/core/: config.py  crypto_cli.py  db.py  file_access.py  file_access_sync.py  ipfs.py  memory_db.py  onchain.py  rbac.py  security.py  settings.py  sqlite_db.py
blockvault_crypto/: Cargo.toml
blockvault_crypto/src/: main.rs
contracts/: BlockVaultLegal.sol  FileRegistry.sol  README.md
scripts/: restart_backend.sh  run_backend.py
static/: asset-manifest.json  index.html  manifest.json
static/static/css/: main.8ba73338.css  main.8ba73338.css.map
static/static/js/: main.16baca0f.js  main.16baca0f.js.map
tests/: test_auth_flow.py  test_files_flow.py
