[package]
name = "blockvault_crypto"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
aes-gcm = { version = "0.10", features = ["aes"] }
pbkdf2 = "0.12"
sha2 = "0.10"
rand = "0.8"
base64 = "0.22"
anyhow = "1.0"
zeroize = "1.8"
hex = "0.4"
tempfile = "3.12"
